--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "sirv public -s --no-clear"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "rollup": "^2.3.4",
@@ -15,10 +16,15 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.4"
   },
   "dependencies": {
-    "@rollup/plugin-alias": "^3.1.9",
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.17.0",
+    "postcss": "^8.4.14",
+    "rollup-plugin-postcss": "^4.0.2",
     "sirv-cli": "^2.0.0",
     "svelte-router-spa": "^6.0.3"
   }
