--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^7.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-generate-html-template": "^1.7.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.4"
+    "svelte-preprocess": "^4.10.7"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.7",
-    "daisyui": "^2.17.0",
-    "postcss": "^8.4.14",
-    "rollup-plugin-postcss": "^4.0.2",
+    "bootstrap": "^5.1.3",
     "sirv-cli": "^2.0.0",
     "svelte-router-spa": "^6.0.3"
   }
