--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public -s --no-clear"
+    "build": "npx rollup -c",
+    "dev": "npx rollup -c -w",
+    "start": "npx serve -n -l 5000 public"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
@@ -30,6 +30,6 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "sirv-cli": "^2.0.0",
-    "svelte-router-spa": "^6.0.3"
+    "svelte-spa-router": "^3.2.0"
   }
 }
